# swagger.yml
@@ -11,14 +11,15 @@ info:
   termsOfService: terms
   contact:
     name: David Bohl
-    url: https://github.com/DerDavidBohl/UserService
+    url: https://github.com/DerDavidBohl
     email: david@bohl24.de
   license:
     name: MIT
     url: http://opensource.org/licenses/MIT
 paths:
-  /auth:
+  /login:
     post:
+      security: []
       description: Authenticates a User
       parameters:
         - $ref: '#/parameters/loginInBody'
@@ -28,9 +29,9 @@ paths:
           headers:
             authorization:
               type: string
-
   /reset:
     post:
+      security: []
       description: Resets a password for a email
       parameters:
         - $ref: '#/parameters/emailInQuery'
@@ -41,6 +42,7 @@ paths:
           description: OK
   /reset/request:
     post:
+      security: []
       description: Requests a password reset for a email
       parameters:
         - $ref: '#/parameters/emailInBody'
@@ -62,7 +64,40 @@ paths:
       responses:
         '201':
           description: Created
-
+  /users/verify:
+    post:
+      security: []
+      parameters:
+        - $ref: '#/parameters/emailInQuery'
+        - $ref: '#/parameters/verifyTokenInQuery'
+      description: Verifies a User
+      responses:
+        '200':
+          description: OK
+  /users/current:
+    get:
+      description: gets the current User
+      responses:
+        '200':
+          description: OK
+  /users/current/password:
+    put:
+      description: Sets the password for the current User
+      parameters:
+        - $ref: '#/parameters/newPasswordInBody'
+      responses:
+        '204':
+          description: Password set
+  /users/current/roles:
+    get:
+      description: Gets current Users Roles
+      responses:
+        '200':
+          description: OK
+          schema:
+            type: array
+            items: 
+              type: string
   /users/{userId}:
     parameters:
       - $ref: '#/parameters/userIdInPath'
@@ -71,20 +106,14 @@ paths:
       responses:
         '200':
           description: OK
-          schema:
-            $ref: '#/definitions/User'
-    put:
-      description: Updates a User
-      parameters:
-        - $ref: '#/parameters/userInBody'
-      responses:
-        '204':
-          description: OK
     delete:
       description: Deletes a User
       responses:
         '204':
           description: Deleted
+  # /users/{userId}/data:
+  #   parameters:
+  #     - $ref: '#/parameters/userIdInPath'
   /users/{userId}/roles:
     parameters:
       - $ref: '#/parameters/userIdInPath'
@@ -112,15 +141,6 @@ paths:
       description: Removes a Role from a User
       responses:
         '204':
-          description: OK
-  /users/verify:
-    post:
-      parameters:
-        - $ref: '#/parameters/emailInQuery'
-        - $ref: '#/parameters/verifyTokenInQuery'
-      description: Verifies a User
-      responses:
-        '200':
           description: OK
 parameters:
   resetTokenInQuery:
@@ -198,10 +218,6 @@ definitions:
         type: string
       password:
         type: string
-      roles:
-        type: array
-        items:
-          type: string
   Email:
     type: object
     properties:
